fix: Add more whitespace in popup

--- a/src/components/ui/Section/Section.module.css
+++ b/src/components/ui/Section/Section.module.css
@@ -145,6 +145,7 @@
         .content {
           width: 100%;
           height: max-content;
+          padding: 0.5em;
 
           &.closed {
             display: none;
