--- a/src/components/ui/Toggle/Toggle.module.css
+++ b/src/components/ui/Toggle/Toggle.module.css
@@ -1,10 +1,10 @@
 .toggle {
   --svg-size: 0.75;
-  --pill-width: 2.5em;
-  --pill-height: 1.5em;
-  --knob-width: 1.1em;
-  --knob-height: 1.1em;
-  --knob-inset: 0.2em;
+  --pill-width: 2.75em;
+  --pill-height: 1.625em;
+  --knob-width: 1.2em;
+  --knob-height: 1.2em;
+  --knob-inset: 0.2125em;
   --transition-duration: var(--duration-transitions);
   --color-off-background: var(--color-surface-primary-400);
   --color-off-background-knob: white;
